# pipelinerx

./: .env.example  .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  test_endpoints.py  test_smoke.py  validate_checklist.py
app/: environment.py  main.py  models.py
app/tasks/: __init__.py  task1.py  task2.py  task3.py  task4.py  task5.py
server/: app.py
